[golib] Introduce a basic configurable grpc and http server framework
